--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -1,3 +1,13 @@
-h1 {
-    font-size: 100px;
+@use "./components/footer";
+
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
