--- a/frontend_eventura/src/styles/components/_navbar.scss
+++ b/frontend_eventura/src/styles/components/_navbar.scss
@@ -12,11 +12,12 @@
             position: absolute;
             left: 0;
             bottom: -5px;
-            background-color: black;
+            background-color: black; // Change color to global vars
             height: 1px;
             width: 0;
             transition: width 300ms;
         }
+
         &:hover:after {
             width: 100%;
         }
