--- a/frontend_eventura/src/styles/abstracts/_mixins.scss
+++ b/frontend_eventura/src/styles/abstracts/_mixins.scss
@@ -7,6 +7,13 @@ $lg: 992px; // landscape tablets / laptops
     justify-content: center;
 }
 
+@mixin flex-center() {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 // Media query mixins
 @mixin small-screen() {
     @media only screen and (min-width:$sm) and (max-width:$md) {
