--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -1,5 +1,6 @@
 @use "./components/footer";
 @use "./components/navbar";
+@use "./base/typography.scss";
 
 
 $box-shadow: 0px 4px 12px -2px black, //palette.$clr-primary, // CHANGE TO PALETTE
