Style(frontend-scss): Add temp colors, add icon hover effect

--- a/frontend_eventura/src/styles/abstracts/_palette.scss
+++ b/frontend_eventura/src/styles/abstracts/_palette.scss
@@ -1,7 +1,8 @@
 $color-white:rgba(255, 255, 255, 1);
+$color-light-grey: rgba(124, 141, 140, 1);
 $color-light-black: rgba(52, 54, 53, 1);
 $color-black: rgba(0, 0, 0, 1);
 // TO FILL OUT
-// $color-primary: 
-// $color-secondary: 
-// $color-tertiary: 
+$color-primary: rgba(82, 103, 96, 1); // CHANGE TO ACTUAL COLORS
+$color-secondary: rgba(55, 75, 74, 1); // CHANGE TO ACTUAL COLORS
+// $color-tertiary: // ADD IF NEEDED
