--- a/frontend_eventura/src/styles/components/_inputform.scss
+++ b/frontend_eventura/src/styles/components/_inputform.scss
@@ -15,6 +15,8 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-left: auto;
+    margin-right: auto;
 
     .form__field {
       display: flex;
