--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -3,9 +3,9 @@
 @use "./base/typography.scss";
 @use "./components/inputform";
 @use "./components/bookings";
+@use "./components/button";
 
-$box-shadow: 0px 4px 12px -2px black, //palette.$clr-primary, // CHANGE TO PALETTE
-0px 3px 7px -3px black;//palette.$clr-primary;
+
 
 //Used to push the footer down to the bottom
 body, html {
