--- a/frontend_eventura/src/styles/components/_navbar.scss
+++ b/frontend_eventura/src/styles/components/_navbar.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/mixins";
+
 .navbar-nav {
 
     display: flex;
@@ -30,4 +32,8 @@
         display: block;
         padding: 5px 0px;
     }
+}
+
+nav {
+    @include mixins.box-shadow-effect();
 }
