--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -5,8 +5,6 @@
 @use "./components/bookings";
 @use "./components/button";
 
-
-
 //Used to push the footer down to the bottom
 body, html {
     height: 100%;
@@ -17,4 +15,13 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+}
+
+main {
+    padding-top: 100px;
+}
+
+header {
+    position: fixed;
+    width: 100%;
 }
