--- a/frontend_eventura/src/styles/components/_inputform.scss
+++ b/frontend_eventura/src/styles/components/_inputform.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh; // centers form vertically
+  //min-height: 100vh; // centers form vertically
   background-color: #f9f9f9; // subtle background
 
   &__form {
