--- a/frontend_eventura/src/styles/components/_bookings.scss
+++ b/frontend_eventura/src/styles/components/_bookings.scss
@@ -1,8 +1,10 @@
+@use "../abstracts/palette";
+
 .events, 
 .booked {
   padding: 20px;
   background-color: #f9f9f9;
-  max-height: 100vh;
+  // max-height: 100vh;
 
   &__title {
     text-align: center;
@@ -11,11 +13,11 @@
     color: #333;
   }
 
-  &__grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 15px;
-  }
+  // &__grid {
+  //   display: grid;
+  //   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  //   gap: 15px;
+  // }
 }
 
 .event-card {
@@ -26,15 +28,15 @@
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 
   &__name {
-    font-size: 12px;
+    font-size: 20px;
     font-weight: 600;
-    color: #007bff;
+    color: poalett;
     margin-bottom: 6px;
   }
 
   &__date,
   &__location {
-    font-size: 10px;
+    // font-size: 10px;
     color: #555;
     margin: 4px 0;
   }
