Style(button.scss): small buttons

--- a/frontend_eventura/src/styles/components/_button.scss
+++ b/frontend_eventura/src/styles/components/_button.scss
@@ -2,10 +2,9 @@
 @use "../abstracts/mixins";
 @use "../base/typography.scss";
 
-button {
+.button {
     padding: 8px 40px;
     border: none;
-    // border-radius: 10px;
     background-color: palette.$color-primary;
     font-weight: typography.$fw-bold;
     color: white;
@@ -13,6 +12,21 @@ button {
     &:hover {
         background-color: palette.$color-secondary;
         transition: 300ms ease-in-out;
-        @include mixins.box-shadow-effect();
+        // @include mixins.box-shadow-effect();
+    }
+}
+
+
+.small-button {
+        padding: 5px 20px;
+    border: none;
+    background-color: palette.$color-primary;
+    font-weight: typography.$fw-bold;
+    color: white;
+
+    &:hover {
+        background-color: palette.$color-secondary;
+        transition: 300ms ease-in-out;
+        // @include mixins.box-shadow-effect(palette.$color-secondary);
     }
 }
