Style(frontend): footer icons

--- a/frontend_eventura/src/styles/components/_footer.scss
+++ b/frontend_eventura/src/styles/components/_footer.scss
@@ -5,7 +5,7 @@
 
     &__icon {
         font-size: 40px;
-        color: palette.$color-light-grey;
+        color: palette.$color-secondary;
         
         &:hover {
             color: palette.$color-primary;
