--- a/frontend_eventura/src/styles/components/_bookings.scss
+++ b/frontend_eventura/src/styles/components/_bookings.scss
@@ -4,13 +4,15 @@
 .events, 
 .booked {
   padding: 20px;
-  background-color: #f9f9f9;
+  // background-color: #f9f9f9;
 
   &__title {
     text-align: center;
     font-size: typography.$fs-heading-3;
     margin-bottom: 20px;
-    color: #333;
+    color:  typography.$color-text-white;
+    font-weight: typography.$fw-bold;
+    // color: #333;
   }
 }
 
