--- a/frontend_eventura/src/styles/main.scss
+++ b/frontend_eventura/src/styles/main.scss
@@ -16,7 +16,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    // background-color: #F9F9F9;
 }
 
 main {
@@ -31,5 +30,5 @@ header {
 }
 
 img {
-    object-fit: cover no-repeat;
+    object-fit: cover;
 }
